chore: improve project setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
+######################################################################################################################################################
+
+# @project        CesiumPy
+# @file           .gitignore
+# @license        Apache 2.0
+
+######################################################################################################################################################
+
 build/
 dist/
 *.pyc
 test*.py
 test*.html
 *.egg-info
+
+######################################################################################################################################################
