--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
+######################################################################################################################################################
+
+# @project        CesiumPy
+# @file           .travis.yml
+# @license        Apache 2.0
+
+######################################################################################################################################################
+
 language: python
 env:
   matrix:
@@ -41,3 +49,5 @@ after_success:
   - if [ "$COVERAGE" ]; then
       coveralls;
     fi
+
+######################################################################################################################################################
