--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,13 +1,28 @@
 ######################################################################################################################################################
 
 # @project        CesiumPy
-# @file           requirements.txt
+# @file           requirements-dev.txt
 # @license        Apache 2.0
 
 ######################################################################################################################################################
 
-six
-traitlets
-geopy>=1.11.0
+# Linting
+
+flake8~=4.0
+
+# Checking
+
+mypy==0.940
+
+# Testing
+
+pytest~=6.2
+pytest-cov~=3.0
+coverage~=6.3
+
+# Packaging
+
+better-setuptools-git-version~=1.0
+twine~=4.0
 
 ######################################################################################################################################################
