--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,21 +8,22 @@
 
 # Linting
 
-flake8~=4.0
+black==22.10.0
+flake8==5.0.4
 
 # Checking
 
-mypy==0.940
+mypy==0.982
 
 # Testing
 
-pytest~=6.2
-pytest-cov~=3.0
-coverage~=6.3
+pytest==7.1.3
+pytest-cov==4.0.0
+coverage==6.5.0
 
 # Packaging
 
-better-setuptools-git-version~=1.0
-twine~=4.0
+better-setuptools-git-version==1.0.5
+twine==4.0.1
 
 ######################################################################################################################################################
