--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,6 @@ dist/
 test*.py
 test*.html
 *.egg-info
+.coverage
 
 ######################################################################################################################################################
