feat: fix tests and update some source code to reflect that

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
-######################################################################################################################################################
-
-# @project        CesiumPy
-# @file           requirements.txt
-# @license        Apache 2.0
-
-######################################################################################################################################################
+# Apache License 2.0
 
 six
 traitlets
 geopy>=1.11.0
-
-######################################################################################################################################################
