--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,4 @@
-################################################################################################################################################################
-
-# @project        CesiumPy
-# @file           .dockerignore
-# @license        Apache 2.0
-
-################################################################################################################################################################
+# Apache License 2.0
 
 **/.DS_Store
 **/.gitignore
@@ -17,5 +11,3 @@
 
 build/
 dist/
-
-################################################################################################################################################################
