--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-######################################################################################################################################################
-
-# @project        CesiumPy
-# @file           .gitignore
-# @license        Apache 2.0
-
-######################################################################################################################################################
+# Apache License 2.0
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -133,5 +127,3 @@ dmypy.json
 
 # Misc
 tmp/
-
-######################################################################################################################################################
