--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,4 @@
-######################################################################################################################################################
-
-# @project        CesiumPy
-# @file           .travis.yml
-# @license        Apache 2.0
-
-######################################################################################################################################################
+# Apache License 2.0
 
 language: python
 env:
@@ -49,5 +43,3 @@ after_success:
   - if [ "$COVERAGE" ]; then
       coveralls;
     fi
-
-######################################################################################################################################################
