--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,15 +1,7 @@
-######################################################################################################################################################
-
-# @project        CesiumPy
-# @file           MANIFEST.in
-# @license        Apache 2.0
-
-######################################################################################################################################################
+# Apache License 2.0
 
 include MANIFEST.in
 include LICENSES/*
 include README.md
 include requirements.txt
 include setup.py
-
-######################################################################################################################################################
