--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,4 @@
-######################################################################################################################################################
-
-# @project        CesiumPy
-# @file           requirements-dev.txt
-# @license        Apache 2.0
-
-######################################################################################################################################################
+# Apache License 2.0
 
 # Linting
 
@@ -20,10 +14,12 @@ mypy==0.982
 pytest==7.1.3
 pytest-cov==4.0.0
 coverage==6.5.0
+pandas==2.2.2
+numpy==2.0.0
+shapely==2.0.4
+scipy==1.13.1
 
 # Packaging
 
 better-setuptools-git-version==1.0.5
 twine==4.0.1
-
-######################################################################################################################################################
