--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -15,9 +15,11 @@ pytest==7.1.3
 pytest-cov==4.0.0
 coverage==6.5.0
 pandas==2.2.2
-numpy==2.0.0
+numpy<2.0.0
 shapely==2.0.4
 scipy==1.13.1
+geopandas==1.0.1
+czml3==1.0.1
 
 # Packaging
 
